sources/airflow/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airflow
  labels:
    app.kubernetes.io/name: airflow
    app.kubernetes.io/component: web
spec:
  rules:
  - host: airflow.codeformuenster.org
    http:
      paths:
      - path: /
        backend:
          serviceName: airflow-web
          servicePort: 8080
  tls:
  - hosts:
    - airflow.codeformuenster.org
    secretName: airflow-ingress-cert
